# news_maker

./: .env.example  README.md  langgraph.json  pyproject.toml
src/: app.py
src/graph/: graph.py  state.py
src/graph/nodes/: anchor.py  ask_topic.py  manager.py  reporter.py  screen_writer.py
src/graph/prompts/: screen_writer.py
src/tts/: adapter.py
src/tts/prompts/: anchor_prompt.py  reporter_prompt.py
