[project]
name = "news_maker"
version = "0.0.1"
description = "A News Maker with Screenwriter, Anchor and Reporter with TTS voice"
authors = [{ name = "Luis Felipe Bardi", email = "luisfbardi@gmail.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.6",
    "python-dotenv>=1.0.1",
    "langchain-openai>=0.2.0",
    "pydantic>=2.7.0",
    "openai>=1.37.0",
    "numpy>=1.26.0",
    "sounddevice>=0.4.6",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["graph", "tts"]

[tool.setuptools.package-dir]
graph = "src/graph"
tts = "src/tts"

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
ignore = ["UP006", "UP007", "UP035", "D417", "E501"]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = ["anyio>=4.7.0", "langgraph-cli[inmem]>=0.2.8", "pytest>=8.3.5"]
